unpackaged/main/default/objects/n2de__Distribution_hours__c/n2de__Distribution_hours__c.object-meta.xml
<CustomObject>
    <description>Distribution hours</description>
    <label>Distribution hours</label>
    <nameField>
        <displayFormat>DH-{0000}</displayFormat>
        <label>Distribution hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>