unpackaged/main/default/objects/n2de__Distribution_hours__c/fields/n2de__Is_shift_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_shift_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift hours</label>
    <type>Checkbox</type>
</CustomField>