unpackaged/main/default/objects/n2de__Distribution_hours__c/fields/n2de__Json__c.field-meta.xml
<CustomField>
    <fullName>n2de__Json__c</fullName>
    <description>Json data for the distribution hours</description>
    <label>Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>