unpackaged/main/default/objects/n2de__Distribution_hours__c/fields/n2de__Shift_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Shift_name__c</fullName>
    <inlineHelpText>Name of shift pattern</inlineHelpText>
    <label>Shift name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>