unpackaged/main/default/objects/n2de__Distribution_hours__c/fields/n2de__Timezone__c.field-meta.xml
<CustomField>
    <fullName>n2de__Timezone__c</fullName>
    <inlineHelpText>The timezone associated with the working hours for this team.</inlineHelpText>
    <label>Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>